--- a/docs/_posts/2016-11-26-saber.markdown
+++ b/docs/_posts/2016-11-26-saber.markdown
@@ -3,8 +3,8 @@ layout: post
 title: "Making an Audio Lightsaber"
 date: 2016-11-28
 categories:
-  - Hardware
-  - Sound Design
+  - "Hardware"
+  - "Sound Design"
 description: "DIY Audio Lightsaber made with Bela"
 image: saber.jpg
 author: robert
