--- a/docs/_posts/2016-11-28-dbox.markdown
+++ b/docs/_posts/2016-11-28-dbox.markdown
@@ -9,7 +9,7 @@ categories:
   - Hacking
 description: "Hackable Musical Instruments"
 image: hacking.jpg
-author: robert
+author: andrew
 ---
 
 Hackable Musical Instruments
