--- a/docs/_posts/2016-11-26-saber.markdown
+++ b/docs/_posts/2016-11-26-saber.markdown
@@ -36,14 +36,22 @@ The sound engine that we created in Pure Data consists of two main parts, the sh
 
 **Redesign**
 
-Shortly after the intial prototype Ho Huen redesigned the saber to incorporate flashing in lights (in both red and blue), a new laser cut holder for the Bela board and battery and speaker that slides perfectly into the new perspex tube. Ho also designed a little breakout board that combines the accelerometer and piezo inputs to make them easier to run down the tube. The next goal is to remake the lightsaber into an even more lightweight version with brighter lights.
+Shortly after the intial prototype Ho Huen from the electronics lab at Queen Mary University of London redesigned the saber to incorporate flashing in lights (in both red and blue), a new laser cut holder for the Bela board and battery and speaker that slides perfectly into the new perspex tube. Ho also designed a little breakout board that combines the accelerometer and piezo inputs to make them easier to run down the tube.
 
 {% include single-image.html fileName="saber_hilt.jpg" %}
 
 {% include single-image.html fileName="saber_school.jpg" %}
 
+Here are some pictures of the next prototype. The goal is to remake the lightsaber into a more lightweight version with brighter lights that can withstand even the most intense duelling.
+
+{% include single-image.html fileName="saber_ho_1.jpg" %}
+
+{% include single-image.html fileName="saber_ho_2.jpg" %}
+
+{% include single-image.html fileName="saber_ho_3.jpg" %}
+
 **Portable Version**
 
-When showcasing Bela we quickly realised that the lightsaber was not easiest demo to move around. Using the same components we created a minature version of the lightsaber that is able to fit into a rucksack. The result is the vangelisiser, with sound design inspired by the one and only Vangelis. Have a listen below.
+When showcasing Bela we quickly realised that the lightsaber was not the easiest demo to move around. Using the same components we created a minature version of the lightsaber that is able to fit into a rucksack adn premiered at Sonar 2016. The result is the vangelisiser, with sound design inspired by the one and only Vangelis. Have a listen below.
 
 {% include single-image.html fileName="saber_new.jpg" %}
