--- a/docs/_posts/2016-11-28-steim.markdown
+++ b/docs/_posts/2016-11-28-steim.markdown
@@ -18,7 +18,7 @@ In August 2016 a three-day workshop was organised at [STEIM](http://steim.org/) 
 The workshop started with participants presenting their instrument (pre-Bela) to the group, including a description and short demo performance if the instrument was in a working state. The facilitators then introduced Bela and supplied each participant with a Bela kit. After a hands-on tutorial that got participants acquainted with the hardware and programming tools they would need for the rest of the workshop, the activity shifted to instrument-making. Finally, at the end of the last day, participants were invited to give a final demonstration of their newly-ported instrument. 
 
 
-Participants: Marije Baalman, Till Bovermann, Tijs Ham, Mark Ijzerman, Tom Mudd, Jonathan Reus, Fedde ten Berge, Dianne Verdonk.
+Participants: [Marije Baalman](https://www.marijebaalman.eu/), [Till Bovermann](http://tai-studio.org/), [Tijs Ham](http://tapage-sound.com/), [Mark Ijzerman](http://markijzerman.com/), [Tom Mudd](http://www.tommudd.co.uk/), [Jonathan Reus](http://jonathanreus.com/), [Fedde ten Berge](http://www.feddetenberge.nl/), [Dianne Verdonk](https://dianneverdonk.wordpress.com/).
 
 {% include single-image.html fileName="steim-2.jpg" %}
 
