--- a/docs/_posts/2016-11-28-steim.markdown
+++ b/docs/_posts/2016-11-28-steim.markdown
@@ -13,19 +13,19 @@ author: andrew
 
 In August 2016 a three-day workshop was organised at [STEIM](http://steim.org/) (Amsterdam), a renowned centre for experimental music. STEIM was chosen for its influence in the DMI community and for the interest that several members had expressed in Bela. Eight experienced DMI creators participated to the event, with two Bela creators acting as technical facilitators and two other researchers collecting documentary evidence. The goal of the workshop was for each DMI creator to port their existing instrument design to Bela.
 
-{% include single-image.html fileName="steim-1.jpg" %}
+{% include single-image.html fileName="steim-1.jpg" caption="Caption goes here" %}
 
 The workshop started with participants presenting their instrument (pre-Bela) to the group, including a description and short demo performance if the instrument was in a working state. The facilitators then introduced Bela and supplied each participant with a Bela kit. After a hands-on tutorial that got participants acquainted with the hardware and programming tools they would need for the rest of the workshop, the activity shifted to instrument-making. Finally, at the end of the last day, participants were invited to give a final demonstration of their newly-ported instrument. 
 
 
 Participants: [Marije Baalman](https://www.marijebaalman.eu/), [Till Bovermann](http://tai-studio.org/), [Tijs Ham](http://tapage-sound.com/), [Mark Ijzerman](http://markijzerman.com/), [Tom Mudd](http://www.tommudd.co.uk/), [Jonathan Reus](http://jonathanreus.com/), [Fedde ten Berge](http://www.feddetenberge.nl/), [Dianne Verdonk](https://dianneverdonk.wordpress.com/).
 
-{% include single-image.html fileName="steim-2.jpg" %}
+{% include single-image.html fileName="steim-2.jpg" caption="Caption goes here" %}
 
-{% include single-image.html fileName="steim-3.jpg" %}
+{% include single-image.html fileName="steim-3.jpg" caption="Caption goes here" %}
 
-{% include single-image.html fileName="steim-6.jpg" %}
+{% include single-image.html fileName="steim-6.jpg" caption="Caption goes here" %}
 
-{% include single-image.html fileName="steim-4.jpg" %}
+{% include single-image.html fileName="steim-4.jpg" caption="Caption goes here" %}
 
-{% include single-image.html fileName="steim-5.jpg" %}
+{% include single-image.html fileName="steim-5.jpg" caption="Caption goes here" %}
